--- a/index.css
+++ b/index.css
@@ -36,3 +36,21 @@ img {
 .btn {
     margin: 0 auto;
 }
+#favoritesDoggies {
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#favoritesDoggies article {
+    width: 100%;
+}
+#favoritesDoggies img {
+    width: 500px;
+    height: 500px;
+    border: 2px double black;
+}
+#favoritesDoggies button {
+    width: 30%;
+    margin: 0 auto;
+}
